<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="32dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingBottom="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg"
        >

        <LinearLayout
            android:id="@+id/outofservice_header_frame"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:src="@drawable/popup_icon_oos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

            <TextView
                android:paddingTop="16dp"
                android:text="@string/outofservice_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextDrawer.Widget.HomeStatusbar_Notification_Title"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_gray"
                />

        </LinearLayout>

        <TextView
            android:paddingTop="10dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="10dp"
            android:id="@+id/outofservice_btn_ok"
            android:text="@string/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_blue"
            style="@style/TextDrawer.Widget.HomeStatusbar_BTN_Alert"
            />

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_below="@id/outofservice_header_frame"
            android:layout_above="@id/outofservice_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/outofservice_date"
                android:text="@string/notification_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/dark_gray"
                style="@style/TextDrawer.Widget.HomeStatusbar_Notification_Desc_1"
                />

            <TextView
                android:paddingTop="16dp"
                android:text="@string/outofservice_desc_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextDrawer.Widget.HomeStatusbar_Notification_Desc_3"
                />

            <TextView
                android:paddingTop="5dp"
                android:text="@string/outofservice_desc_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextDrawer.Widget.HomeStatusbar_Notification_Desc_3"
                />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>